# sharify

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/memory/: mod.rs
src/shared_memory/: NOTICE.txt  mod.rs  unix.rs  windows.rs
tests/: serialization_count.rs
